<resources>
    <string name="app_name">My e-commerce</string>
    <string name="woman">WOMAN</string>
    <string name="man">MAN</string>
    <string name="kids">KIDS</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="favourites">Favourites</string>
    <string name="menu">MENU</string>
    <string name="user">My account</string>
    <string name="cart">Shopping bag</string>
    <string name="search_disable">Disabled</string>
    <string name="defaultChannel">My E commerce default channel</string>
    <string name="notificationDescription">Review your fav article</string>
    <string name="deepLinkNotificationTitle">Review your fav article:</string>
</resources>