<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.myecommerce.search.ui.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/appCompatImageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/textField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/search"
            android:paddingTop="-16dp"
            app:endIconMode="clear_text"
            app:hintTextAppearance="@style/Hint"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchBar"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                tools:text="T-shirt"
                android:lines="1"
                android:textAppearance="@style/Heading.TopBar"
                android:background="@color/transparent"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onSearchTextChanged(text)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/categoryConainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            app:layout_constraintVertical_bias="0">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                app:selectedCategory="@{viewModel.selectedCategory}"
                tools:textAppearance="@style/Body.Text.Bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/man"
                android:textAppearance="@style/Body.Text"
                app:selectedCategory="@{viewModel.selectedCategory}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/kids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/kids"
                android:textAppearance="@style/Body.Text"
                app:selectedCategory="@{viewModel.selectedCategory}" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryConainer"
            app:spanCount="2"
            tools:listitem="@layout/view_search_result" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>